k3s-userapps/phos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phos
  namespace: phos
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: phos
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: phos
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: phos-data
          persistentVolumeClaim:
            claimName: phos-data
      containers:
        - image: 'ghcr.io/diverofdark/phos:latest'
          imagePullPolicy: Always
          name: phos
          ports:
            - containerPort: 33000
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /app/data
              name: phos-data
          livenessProbe:
            httpGet:
              path: /
              port: 33000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 33000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 15
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 4Gi
