k3s-userapps/phos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phos
  namespace: phos
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 33000
  selector:
    app.kubernetes.io/pod: phos
  type: ClusterIP
