k3s-userapps/phos/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phos
  namespace: phos
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: phos
