k3s-userapps/phos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://phos.kirillorlov.pro"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Phos
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=phos"
    gethomepage.dev/description: "AI-Powered Photo Manager"
  name: phos
  namespace: phos
spec:
  rules:
  - host: phos.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: phos
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - phos.kirillorlov.pro
    secretName: phos-tls
